Add metodo de recomendação de livros